<resources>
    <string name="app_name">Bus Navigation System</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_password">Enter Password:</string>


    <string name="enter_id">Enter Id:</string>

    <string name="validate">Login</string>
    <string name="next">Next</string>
    <string name="welcome_to_bns_system">WELCOME TO BNS SYSTEM...</string>
    <string name="enter_name">Enter Name:</string>
    <string name="hello">HELLO</string>
    <string name="h">h</string>
    <string name="c">c</string>

    <string name="database">DATABASE</string>
    <string name="create">create</string>
    <string name="update">update</string>
    <string name="view">view</string>
    <string name="name">name</string>
    <string name="enter">Enter</string>
    <string name="dest">dest</string>
    <string name="destination">Destination:</string>
    <string name="create_submit">Create</string>
    <string name="database_img">TODO</string>
    <string name="bus_no">Bus No:</string>
    <string name="bus_img">Bus_Img</string>
    <string name="bus_navigation_system">BUS NAVIGATION SYSTEM...</string>
    <string name="gps_img">GPS_img</string>
    <string name="source">Source:</string>
    <string name="bus_val">Name</string>
    <string name="button">Button</string>
    <string name="update1">Update</string>
    <string name="delete1">Delete</string>

    <string name="bus_no1">Bus No:</string>
    <string name="source1">Source</string>
    <string name="destination1">Destination</string>
    <string name="enter_details">Enter Details</string>
    <string name="title_activity_g_p_s_tracker">Map</string>

</resources>