<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/start_img"

        android:layout_width="wrap_content"
        android:layout_height="441dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27"
        app:srcCompat="@drawable/start_img" />

    <EditText
        android:id="@+id/emp_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/fondamento"
        android:hint="@string/enter_name"
        android:inputType="textPersonName|textCapWords"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_img"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="211dp"
        android:layout_height="35dp"
        android:background="@drawable/rounded_btns"
        android:fontFamily="@font/elsie_swash_caps"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emp_id"
        app:layout_constraintVertical_bias="0.325" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#2196F3"
        android:ellipsize="marquee"
        android:fadingEdge="horizontal"
        android:fontFamily="@font/courgette"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/welcome_to_bns_system"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>