<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E53935"
    tools:context=".CreateActivity">


    <TextView
        android:id="@+id/bus_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/bus_no"
        android:fontFamily="@font/amaranth_italic"
        android:text="@string/bus_no"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/dest_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/dest"
        android:fontFamily="@font/amaranth_italic"
        android:text="@string/destination"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/source_txt" />


    <Button
        android:id="@+id/create_btn"
        android:layout_width="257dp"
        android:layout_height="54dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/round_button_colorpurple"
        android:fontFamily="@font/atomic_age"
        android:text="@string/create_submit"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_cre" />

    <TextView
        android:id="@+id/source_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/amaranth_italic"

        android:text="@string/source"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/busno_val"
        android:layout_width="171dp"
        android:layout_height="41dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/fondamento"

        android:inputType="number"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/source_val"
        android:layout_width="171dp"
        android:layout_height="41dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:fontFamily="@font/fondamento"
        android:inputType="textPersonName|textCapWords"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conc_crea" />

    <EditText
        android:id="@+id/dest_val"
        android:layout_width="171dp"
        android:layout_height="41dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:fontFamily="@font/fondamento"
        android:inputType="textPersonName|textCapWords"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/source_val" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/amaranth_italic"
        android:text="Name:"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bus_txt" />

    <EditText
        android:id="@+id/name_cre"
        android:layout_width="171dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"

        android:ems="10"
        android:fontFamily="@font/fondamento"
        android:inputType="textPersonName|textCapWords"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/busno_val" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/amaranth_italic"
        android:text="Contact No:"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/conc_crea"
        android:layout_width="171dp"
        android:layout_height="41dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:fontFamily="@font/fondamento"
        android:inputType="phone"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_cre" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/amaranth_italic"
        android:text="Reg No: "
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dest_txt" />

    <EditText
        android:id="@+id/reg_cre"
        android:layout_width="171dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:fontFamily="@font/fondamento"
        android:inputType="textPersonName|textCapWords"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dest_val" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:fontFamily="@font/fondamento"
        android:minHeight="?attr/actionBarSize"
        android:gravity="center"
        android:text="@string/enter_details"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp" />


</androidx.constraintlayout.widget.ConstraintLayout>